--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-range": "^1.8.11",
     "use-drag-scroll": "^1.0.1"
   },
